# pikture

./: .editorconfig  .gitignore  Cargo.toml  README.md  com.github.mistakenelf.pikture.yml  meson.build
data/: gschema.xml  meson.build  pikture.desktop.in  pikture.metainfo.xml.in
meson/: post_install.py
po/: POTFILES  com.github.mistakenelf.pikture.pot  de.po  es.po
src/: Application.vala  Config.vala.in  MainWindow.vala  Window.vala  header.vala  main.rs  main.vala  meson.build
src/gtk/: canvas.ui  header.ui  main_window.ui  meson.build  pikture.gresource.xml  sidebar.ui  tab.ui  viewport.ui  window.ui
src/services/: Dialog.vala  DialogService.vala  meson.build
src/widgets/: About.vala  Canvas.vala  Header.vala  Sidebar.vala  Tab.vala  Viewer.vala  Viewport.vala  Window.vala  meson.build
ui/: header.ui  main.slint  pikture.gresource.xml  viewer.ui  window.ui
ui/components/: folder_view.slint  sidebar.slint
